v2 : new table added
