# src/api/v2/seo-pages/dto/update-seo-page.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateSeoPageDto } from './create-seo-page.dto';
+
+export class UpdateSeoPageDto extends PartialType(CreateSeoPageDto) {}
